--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Phillip Kish</title>
+    <title>Daniel Johnston</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Portfolio webpage of Vinay Somawat" />
     <meta
@@ -64,7 +64,7 @@
             <div class="author-img">
               <img alt="profile-img" src="images/logo.jpg" />
             </div>
-            <h1 id="colorlib-logo"><a href="./index.html">Phillip Kish</a></h1>
+            <h1 id="colorlib-logo"><a href="./index.html">Daniel Johnston</a></h1>
           </div>
           <nav
             id="colorlib-main-menu"
@@ -96,7 +96,7 @@
                 <div class="about-desc">
                   <h1>About</h1>
                   <div id="bio">
-                    Senior Software Engineer boasting over 8 years of experience
+                    Senior Software Engineer boasting over 9 years of experience
                     in the design, development, and delivery of intricate
                     web-based applications. Specializing in leading-edge
                     technologies such as JavaScript, Java, Ruby and Golang, with
@@ -140,7 +140,7 @@
                     <div class="progress">
                       <div
                         class="progress-bar color-1"
-                        style="width: 95%"
+                        style="width: 100%"
                       ></div>
                     </div>
                   </div>
@@ -184,7 +184,7 @@
                     <div class="progress">
                       <div
                         class="progress-bar color-3"
-                        style="width: 90%"
+                        style="width: 95%"
                       ></div>
                     </div>
                   </div>
@@ -217,7 +217,7 @@
                     <div class="progress">
                       <div
                         class="progress-bar color-8"
-                        style="width: 90%"
+                        style="width: 100%"
                       ></div>
                     </div>
                   </div>
@@ -266,19 +266,28 @@
                                 </p>
                                 <div>
                                   <span class="badge badge-secondary"
-                                    >Ruby on Rails</span
+                                    >React</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >Next.js</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >Node.js</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >Express.js</span
                                   >
                                   <span class="badge badge-secondary"
                                     >PostgreSQL</span
                                   >
                                   <span class="badge badge-secondary"
-                                    >Bootstrap</span
+                                    >Tailwind CSS</span
                                   >
                                   <span class="badge badge-secondary"
                                     >JavaScript</span
                                   >
                                   <span class="badge badge-secondary"
-                                    >Heroku</span
+                                    >Vercel</span
                                   >
                                 </div>
                               </div>
@@ -308,7 +317,16 @@
                                 </p>
                                 <div>
                                   <span class="badge badge-secondary"
-                                    >Ruby on Rails</span
+                                    >React</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >React Native</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >Node.js</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >Express.js</span
                                   >
                                   <span class="badge badge-secondary"
                                     >PostgreSQL</span
@@ -317,13 +335,132 @@
                                     >Material UI</span
                                   >
                                   <span class="badge badge-secondary"
+                                    >Amazon Web Services</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >XCode</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >Android</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >iOS</span
+                                  >
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="project-card">
+                        <a target="_blank" href="https://www.wonolo.com/">
+                          <div class="resume-item">
+                            <div class="resume-content" id="left-div">
+                              <img
+                                class="img-fluid"
+                                src="images/projects/wonolo.png"
+                                data-xblocker="processing"
+                              />
+                            </div>
+                            <div class="resume-content" id="right-div">
+                              <div class="sub-heading">
+                                <p class="project-description">
+                                  Developed a job marketplace named Wonolo to
+                                  provide user-friendly interfaces and experience on hiring a worker and working with a client.
+                                  Developed a cross-platform including Web, Android and iOS mobile apps.
+                                </p>
+                                <div>
+                                  <span class="badge badge-secondary"
                                     >React</span
                                   >
                                   <span class="badge badge-secondary"
-                                    >Digital Ocean</span
+                                    >Flutter</span
                                   >
                                   <span class="badge badge-secondary"
-                                    >Heroku</span
+                                    >Node.js</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >Express.js</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >AWS DynamoDB</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >Material UI</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >Amazon Web Services</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >XCode</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >Android</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >iOS</span
+                                  >
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="project-card">
+                        <a target="_blank" href="https://www.revampwholesale.com/">
+                          <div class="resume-item">
+                            <div class="resume-content" id="left-div">
+                              <img
+                                class="img-fluid"
+                                src="images/projects/revampwholesale.jpg"
+                                data-xblocker="processing"
+                              />
+                            </div>
+                            <div class="resume-content" id="right-div">
+                              <div class="sub-heading">
+                                <p class="project-description">
+                                  Developed a global B2B Electronics and mobile accessories distributor.
+                                </p>
+                                <div>
+                                  <span class="badge badge-secondary"
+                                    >TypeScript</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >React</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >Next.js</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >React Native</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >Node.js</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >Next.js</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >AWS DynamoDB</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >Tailwind CSS</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >Amazon Web Services</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >XCode</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >Android</span
+                                  >
+                                  <span class="badge badge-secondary"
+                                    >iOS</span
                                   >
                                 </div>
                               </div>
@@ -365,18 +502,17 @@
                         Brightflag<span>April 2019 - September 2023</span>
                       </h2>
                       <span class="timeline-sublabel"
-                        >Senior Ruby Engineer</span
+                        >Senior Full-Stack Engineer</span
                       >
                       <p class="timeline-text">
                         ▪ Spearheaded the development of robust web application
-                        using React and Ruby on Rails, leading to a 60% increase
+                        using React, Next.js, Node.js and AWS, leading to a 60% increase
                         in application responsiveness and a 35% decrease in load
                         times.
                       </p>
                       <p class="timeline-text">
-                        ▪ Developed and documented the JSON RESTful API in Ruby
-                        on Rails to get user's information and enable the
-                        creation of personalized profile.
+                        ▪ Developed and documented the JSON RESTful API in Node.js and Express.js 
+                        to get user's information and enable the creation of personalized profile.
                       </p>
                       <p class="timeline-text">
                         ▪ Implemented the complex business requirements and the
@@ -388,13 +524,13 @@
                       </p>
                       <p class="timeline-text">
                         ▪ Migrated from React with a Redux store and an API
-                        layer to the modern Hotwire stack in four months,
+                        layer to the modern MERN stack in four months,
                         experimented with Vite as an asset’s bundler, and built
                         an isolated QA environment and automation coverage.
                       </p>
                       <p class="timeline-text">
                         ▪ Managed the back-end operations of the project's API
-                        servers using Heroku with Heroku Pipelines and GitHub
+                        servers using Vercel with Vercel Pipelines and GitHub
                         Workflows and moved the application towards more
                         efficient CI/CD practices.
                       </p>
@@ -570,7 +706,7 @@
                 </div>
                 <p>
                   Please feel welcome to contact me via email at
-                  <b>shiny.progressive.pioneer@gmail.com</b>. Whether you would
+                  <b>daniel.johnston937124@gmail.com</b>. Whether you would
                   like to discuss a technology, a business opportunity, or
                   simply say hello, I would be delighted to hear from you.
                 </p>
