--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Daniel Johnston</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Portfolio webpage of Vinay Somawat" />
+    <meta name="description" content="Portfolio webpage of Daniel Johnston" />
     <meta
       name="keywords"
       content="portfolio,website,personal website,github,projects,computer science and engineering"
