--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Daniel Johnston</title>
+    <title>Simon Petersen</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Portfolio webpage of Daniel Johnston" />
     <meta
       name="keywords"
       content="portfolio,website,personal website,github,projects,computer science and engineering"
     />
-    <meta name="author" content="Phillip Kish" />
+    <meta name="author" content="Simon Petersen" />
     <!--------------------Social Media icons------------------------>
     <link
       rel="stylesheet"
@@ -62,9 +62,9 @@
         >
           <div class="text-center">
             <div class="author-img">
-              <img alt="profile-img" src="images/logo.jpg" />
+              <img alt="profile-img" src="images/logo2.jpg" />
             </div>
-            <h1 id="colorlib-logo"><a href="./index.html">Daniel Johnston</a></h1>
+            <h1 id="colorlib-logo"><a href="./index.html">Simon Petersen</a></h1>
           </div>
           <nav
             id="colorlib-main-menu"
@@ -96,10 +96,10 @@
                 <div class="about-desc">
                   <h1>About</h1>
                   <div id="bio">
-                    Senior Software Engineer boasting over 9 years of experience
+                    Senior Full-Stack Engineer boasting over 7 years of experience
                     in the design, development, and delivery of intricate
                     web-based applications. Specializing in leading-edge
-                    technologies such as JavaScript, Java, Ruby and Golang, with
+                    technologies such as JavaScript, C#, Ruby and Golang, with
                     a solid track record of creating scalable and resilient
                     systems that propel business advancement. Demonstrated
                     success in fostering cross-functional collaborations to
@@ -108,7 +108,7 @@
                     competencies encompass advanced front-end development using
                     JavaScript Frameworks such as React, Angular, Vue.js,
                     coupled with back-end development proficiency in Node.js,
-                    Ruby on Rails, Spring Boot and Go. Possess extensive
+                    Ruby on Rails, ASP.NET and Go. Possess extensive
                     experience in deploying cloud-native applications utilizing
                     AWS, and skilled in leveraging Git for efficient version
                     control. <br /><br />Beyond technical acumen, recognized as
@@ -491,7 +491,7 @@
                   <div class="timeline-entry-inner">
                     <div class="timeline-icon color-2">
                       <img
-                        src="images/logos/brightflag_logo.jpg"
+                        src=""
                         width="100%"
                         height="100%"
                         style="object-fit: fill; border-radius: 100%"
@@ -499,7 +499,7 @@
                     </div>
                     <div class="timeline-label">
                       <h2>
-                        Brightflag<span>April 2019 - September 2023</span>
+                        OpenXcell<span>April 2019 - September 2023</span>
                       </h2>
                       <span class="timeline-sublabel"
                         >Senior Full-Stack Engineer</span
@@ -555,14 +555,14 @@
                   <div class="timeline-entry-inner">
                     <div class="timeline-icon color-2">
                       <img
-                        src="images/logos/arex_logo.png"
+                        src=""
                         width="100%"
                         height="100%"
                         style="object-fit: fill; border-radius: 100%"
                       />
                     </div>
                     <div class="timeline-label">
-                      <h2>Arex<span>May 2017 - March 2019</span></h2>
+                      <h2>Andersen Inc.<span>May 2017 - March 2019</span></h2>
                       <span class="timeline-sublabel">Full Stack Engineer</span>
                       <p class="timeline-text">
                         ▪ Assisted in requirements analysis, High Level Design,
@@ -607,14 +607,14 @@
                   <div class="timeline-entry-inner">
                     <div class="timeline-icon color-2">
                       <img
-                        src="images/logos/arex_logo.png"
+                        src=""
                         width="100%"
                         height="100%"
                         style="object-fit: fill; border-radius: 100%"
                       />
                     </div>
                     <div class="timeline-label">
-                      <h2>Arex<span>August 2016 - May 2017</span></h2>
+                      <h2>Palark<span>August 2016 - May 2017</span></h2>
                       <span class="timeline-sublabel">Frontend Developer</span>
                       <p class="timeline-text">
                         ▪ Worked at frontend part of some medium sized projects
@@ -630,14 +630,14 @@
                   <div class="timeline-entry-inner">
                     <div class="timeline-icon color-2">
                       <img
-                        src="images/logos/newswhip_media_logo.jpg"
+                        src=""
                         width="100%"
                         height="100%"
                         style="object-fit: fill; border-radius: 100%"
                       />
                     </div>
                     <div class="timeline-label">
-                      <h2>NewsWhip<span>October 2014 - June 2016</span></h2>
+                      <h2>Easybell GmbH<span>October 2014 - June 2016</span></h2>
                       <span class="timeline-sublabel">Junior Developer</span>
                       <p class="timeline-text">
                         ▪ Delivered responsive, cross-browser compatible and
@@ -675,17 +675,17 @@
                       <img
                         width="100%"
                         height="100%"
-                        src="images/logos/calgary-logo.png"
+                        src=""
                         style="object-fit: fill; border-radius: 100%"
                       />
                     </div>
                     <div class="timeline-label">
                       <h2>
                         Bachelor's Degree in Computer Science and
-                        Engineering<span>2010 - 2014</span>
+                        Engineering<span>2016 - 2020</span>
                       </h2>
                       <span class="timeline-sublabel"
-                        >University of Calgary</span
+                        >University of Hamburg</span
                       >
                     </div>
                   </div>
@@ -706,7 +706,7 @@
                 </div>
                 <p>
                   Please feel welcome to contact me via email at
-                  <b>daniel.johnston937124@gmail.com</b>. Whether you would
+                  <b>pmo60888@outlook.com</b>. Whether you would
                   like to discuss a technology, a business opportunity, or
                   simply say hello, I would be delighted to hear from you.
                 </p>
