--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="icon" type="image/jpg" href="/images/logo.jpg" />
+    <link rel="icon" type="image/jpg" href="/images/logo2.jpg" />
     <link
       href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700"
       rel="stylesheet"
